--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,9 +10,11 @@ http {
     
     server {
         include mime.types;
-        listen 80;
+        listen 81;
         location / {
             root /var/www/static;
+            index index.html index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /api/ {
